--- a/my-home-front/src/pages/onboarding/onboarding.module.css
+++ b/my-home-front/src/pages/onboarding/onboarding.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   padding: 24px 16px;
   background-color: #FFFAF8;
   box-sizing: border-box;
